--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jquery": "^3.1.1",
     "material-ui": "^0.16.1",
     "react": "^15.3.2",
+    "react-materialize": "*",
     "react-dom": "^15.3.2",
     "react-router": "^3.0.0",
     "react-tap-event-plugin": "^1.0.0"
