--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "jquery": "^3.1.1",
     "material-ui": "^0.16.1",
     "react": "^15.3.2",
-    "react-materialize": "*",
+    "react-bootstrap": "^0.30.6",
     "react-dom": "^15.3.2",
+    "react-materialize": "*",
     "react-router": "^3.0.0",
     "react-tap-event-plugin": "^1.0.0"
   },
