--- a/package.json
+++ b/package.json
@@ -22,5 +22,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "homepage": "http://students.washington.edu/iriscsun/INFO343/a7-portfolio"
 }
